--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:postgresql://localhost:5432/elastum_task
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.username=elastum
+spring.datasource.password=elastum
