--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.datasource.url=jdbc:postgresql://localhost:5432/elastum_task
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.datasource.username=elastum
 spring.datasource.password=elastum
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
